supplied propertyfilters supplier
Took 5 minutes