@@ -2,7 +2,6 @@ package de.gupta.clean.crud.template.useCases.query.specification.domain.model;
 
 import java.util.Collection;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public record CompositeFilterSpecification(Collection<LeafFilterSpecification> specifications,
 										   CompositeFilterOperation operation)
@@ -18,7 +17,7 @@ public record CompositeFilterSpecification(Collection<LeafFilterSpecification> s
 			final Collection<Supplier<LeafFilterSpecification>> specifications,
 			final CompositeFilterOperation operation)
 	{
-		return of(specifications.stream().map(Supplier::get).collect(Collectors.toList()), operation);
+		return of(specifications.stream().map(Supplier::get).toList(), operation);
 	}
 
 	public enum CompositeFilterOperation
